Fix route and swagger
