# src/routes/menu-route.js
@@ -4,7 +4,7 @@ const router = express.Router();
 const MenuController = require('../controllers/menu-controller');
 
 router.get('/list', MenuController.findAllMenus);
-router.get('/search', MenuController.findMenuByMenuCode);
-router.post('/regist', MenuController.registNewMenu)
+router.get('/:menuCode', MenuController.findMenuByMenuCode);
+router.post('/', MenuController.registNewMenu)
 
 module.exports = router;
